# pictimp

./: .gitignore  AutoCheck-Linux.sh  LICENSE  Makefile  ProfessorCheck-Windows.ps1  README.md  THIRD_PARTY_NOTICES.txt  build_out.txt  final.txt  final_pytest_output.txt  out.json  out.txt  out2.txt  out3.txt  out_noverify.json  out_verbose.err  pairwise-cli-linux-x64.spec  pyproject.toml  pytest_out.txt  run_all.txt  smoke_doctor.txt  strace.out  strace_python.txt  test_bin_out.txt  test_fuzz_out.txt  test_hang.py  test_import.py  test_out.txt
.github/workflows/: build_release.yml
.hypothesis/constants/: 16f69f0974c0a262  18ec185629d7da86  1ca8e367949b3854  1dc529b74d20f552  1de5ffdb45d49d7f  2b07231080f5dc96  347b4a4a4d64dcdb  4024f0e606ed3098  4731d3f36c99b5bc  501200976fce81f3  53a5ca2f56099efa  582313010c13de5e  5891dd0e0b4b8b04  61f365fa07f35857  71b8131129a5b6fe  7279678b99d4439f  809ce902fb8b7d54  (+15 more)
acceptance/: README.md  expectations.py  run_acceptance.py
docs/: VERIFICATION_CHECKLIST.md
examples/: sample.pict
pairwise_cli/: __init__.py  __main__.py  bounds.py  cli.py  generate.py  model.py  output.py  pict.py  preflight.py  util.py  verify.py  wizard.py
pairwise_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build_exe.ps1  build_exe.sh  build_pict.ps1  build_pict.sh  verify_vendor.py
tests/: test_bounds.py  test_cli_contract.py  test_determinism.py  test_filesystem.py  test_fuzz.py  test_generate_contract.py  test_integration_sample.py  test_model.py  test_output_parse.py  test_pict_select.py  test_verify.py  test_wizard_mock.py
(+11 files in other folders)
