[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pairwise-cli"
version = "1.0.0"
description = "Pairwise testing CLI powered by Microsoft PICT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
pairwise-cli = "pairwise_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
